--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
   <header>
     <div>
-      <h1>Logo</h1>
+      <h1>Aman Kesarwani</h1>
+      <h2>Quantitative Research</h2>
       <nav>
-        <a href="#">Home</a>
-      	<a href="#">About</a>
-      	<a href="#">Contact</a>        
+        <a href="#Home">Home</a>
+      	<a href="#About">About</a>
+      	<a href="#Contact">Contact</a>        
       </nav>
     </div>
   </header>
@@ -24,25 +25,67 @@
   <main>
     <div>
       <article>
-        <section>
+        <section id="Home">
+          <img src="images/amanpaint.jpg" width="300" class="center">
           <header>
-            <h2>Header 1</h2>          
+            <h2>Hello! I am Aman Kesarwani</h2>          
           </header>
-            <p>Paragraph 1</p>
-          <footer>
-            <p>Footer 1</p>          
-          </footer>
+            <p>I am a Quantitative Researcher at JP Morgan Chase  Co. living in Greater New York Area</p>
+          <p>As a mathematics enthusiast, I am also interested in the following areas:
+          <ul>
+            <li>
+              Web development 
+            </li>
+            <li>
+              Dragon Boat Racing
+            </li>
+            <li>
+              Playing drums
+            </li>
+            <li>
+              Swimming
+            </li>
+          </ul></p>
         </section>
       </article>
+      <hr>
       <article>
-        <section>
+        <section id="About">
           <header>
-            <h2>Header 2</h2>          
+            <h2>About Me</h2>          
           </header>
-            <p>Paragraph 2</p>
-          <footer>
-            <p>Footer 2</p>          
-          </footer>
+            <p>
+              Experienced Vice President with a demonstrated history of working in the financial services industry. Skilled in Computer Science, Market Research, Apache Spark, Visual Basic for Applications (VBA), and Neural Networks. Strong professional with a MFE focused in Financial Engineering from University of California, Berkeley, Haas School of Business. 
+            </p>
+          <p>
+            Academic Qualifications:
+            <ol>
+              <li>
+              B. Tech, Mathematics and Computing, IIT Guwahati
+              </li>
+              <li>
+                Masters in Financial Engineering, UC Berkeley
+              </li>
+              <li>
+                Software Engineering, Thinkful
+              </li>
+            </ol>
+          </p>
+        </section>
+      </article>
+      <hr>
+      <article>
+        <section id="Contact">
+          <header>
+            <h2>Contact</h2>          
+          </header>
+          <p>
+            I would love to hear from you! Please feel free to contact or follow me:
+          </p>
+            <p><a href="https://www.linkedin.com/in/aman-kesarwani-1a32781a/" target="_blank">LinkedIn</a></p>
+            <p><a href="https://github.com/amankiitg" target="_blank">GitHub</a></p>
+            <p><a href="mailto:amank.iitg@gmail.com?cc=aman.kesarwani@berkely.edu&subject=Hello%20Aman!">Email</a></p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.2854597398978!2d-73.97901928545224!3d40.755745842876685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258fdd1a617d9%3A0xfb8daf56f743ae90!2s383%20Madison%20Ave%2C%20New%20York%2C%20NY%2010017!5e0!3m2!1sen!2sus!4v1650681028712!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="center"></iframe>
         </section>
       </article>
     </div>
@@ -53,7 +96,7 @@
 	<footer>
     <div>
       <nav>
-        <p>Footer Nav</p>      
+        <p>© Aman Kesarwani</p>      
       </nav>
     </div>
   </footer>
