--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Container Practice #2</title>
+	<title>Aman Kesarwani | Quant</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
