--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -26,12 +26,12 @@
     <div>
       <article>
         <section id="Home">
-          <img src="images/amanpaint.jpg" width="300" class="center">
+          <img src="images/amanpaint.jpg" width="300" alt="" class="center">
           <header>
             <h2>Hello! I am Aman Kesarwani</h2>          
           </header>
             <p>I am a Quantitative Researcher at JP Morgan Chase  Co. living in Greater New York Area</p>
-          <p>As a mathematics enthusiast, I am also interested in the following areas:
+          <p>As a mathematics enthusiast, I am also interested in the following areas:</p>
           <ul>
             <li>
               Web development 
@@ -45,7 +45,7 @@
             <li>
               Swimming
             </li>
-          </ul></p>
+          </ul>
         </section>
       </article>
       <hr>
@@ -59,6 +59,7 @@
             </p>
           <p>
             Academic Qualifications:
+          </p>
             <ol>
               <li>
               B. Tech, Mathematics and Computing, IIT Guwahati
@@ -70,7 +71,7 @@
                 Software Engineering, Thinkful
               </li>
             </ol>
-          </p>
+          
         </section>
       </article>
       <hr>
