--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </p>
             <p><a href="https://www.linkedin.com/in/aman-kesarwani-1a32781a/" target="_blank">LinkedIn</a></p>
             <p><a href="https://github.com/amankiitg" target="_blank">GitHub</a></p>
-            <p><a href="mailto:amank.iitg@gmail.com?cc=aman.kesarwani@berkely.edu&subject=Hello%20Aman!">Email</a></p>
+            <p><a href="mailto:amank.iitg@gmail.com?cc=amankesarwani@berkeley.edu&subject=Hello%20Aman!">Email</a></p>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.2854597398978!2d-73.97901928545224!3d40.755745842876685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258fdd1a617d9%3A0xfb8daf56f743ae90!2s383%20Madison%20Ave%2C%20New%20York%2C%20NY%2010017!5e0!3m2!1sen!2sus!4v1650681028712!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="center"></iframe>
         </section>
       </article>
