--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <body>
 
+  <!--Header-->
   <header>
     <div>
       <h1>Aman Kesarwani</h1>
-      <h2>Quantitative Research</h2>
+      <h3>Quantitative Researcher</h3>
       <nav>
         <a href="#Home">Home</a>
       	<a href="#About">About</a>
@@ -22,15 +23,17 @@
     </div>
   </header>
 
+  <!--Main-->
   <main>
     <div>
       <article>
+        <!--Image and Intro-->
         <section id="Home">
           <img src="images/amanpaint.jpg" width="300" alt="" class="center">
           <header>
             <h2>Hello! I am Aman Kesarwani</h2>          
           </header>
-            <p>I am a Quantitative Researcher at JP Morgan Chase  Co. living in Greater New York Area</p>
+            <p>I am a Quantitative Researcher at JP Morgan Chase  Co. reside in Greater New York Area. </p>
           <p>As a mathematics enthusiast, I am also interested in the following areas:</p>
           <ul>
             <li>
@@ -49,6 +52,7 @@
         </section>
       </article>
       <hr>
+      <!--About Me-->
       <article>
         <section id="About">
           <header>
@@ -56,6 +60,7 @@
           </header>
             <p>
               Experienced Vice President with a demonstrated history of working in the financial services industry. Skilled in Computer Science, Market Research, Apache Spark, Visual Basic for Applications (VBA), and Neural Networks. Strong professional with a MFE focused in Financial Engineering from University of California, Berkeley, Haas School of Business. 
+              <p>Passionate about web development and excellent with collaboration  looking for exciting opportunity in the space at intersection of software and quant.</p>
             </p>
           <p>
             Academic Qualifications:
@@ -75,6 +80,7 @@
         </section>
       </article>
       <hr>
+      <!--Contact Details-->
       <article>
         <section id="Contact">
           <header>
@@ -93,7 +99,7 @@
   </main>
 	
 	
-	
+	<!--Footer-->
 	<footer>
     <div>
       <nav>
