--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <h2>About Me</h2>          
           </header>
             <p>
-              Experienced Vice President with a demonstrated history of working in the financial services industry. Skilled in Computer Science, Market Research, Apache Spark, Visual Basic for Applications (VBA), and Neural Networks. Strong professional with a MFE focused in Financial Engineering from University of California, Berkeley, Haas School of Business. 
+              Experienced Vice President with a demonstrated history of working in the financial services industry. Skilled in Computer Science, Market Research, Apache Spark, Visual Basic for Applications (VBA), and Neural Networks. Strong professional with a MFE focused in Financial Engineering from University of California, Berkeley, Haas School of Business. </p>
               <p>Passionate about web development and excellent with collaboration  looking for exciting opportunity in the space at intersection of software and quant.</p>
-            </p>
+
           <p>
             Academic Qualifications:
           </p>
