--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <li>
               Web development 
             </li>
+	    <li>
+              Triathlon
+            </li>
             <li>
               Dragon Boat Racing
             </li>
